# benxo

./: .env.example  .gitignore  Cache.vcl  Caddyfile  Caddyfile.dev  Cargo.toml  Dockerfile  README.md  TODO.md  Taskfile.yml  devbox.json  docker-compose.yaml  process-compose.yaml  traefik.dev.yaml  traefik.dynamic.dev.yaml  varnish.vcl
.cargo/: config.toml
.github/workflows/: build-deploy.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
backend/src/: api.rs  db.rs  domain.rs  events.rs  extractors.rs  lib.rs  main.rs  validators.rs
backend/src/db/: category.rs  channel.rs  domain.rs  file.rs  mod.rs  order.rs  product.rs  settings.rs  store.rs  theme.rs  user.rs
backend/src/extractors/: cookies.rs  extractors.rs  json.rs  mod.rs
backend/src/middlewares/: auth.rs
backend/src/models/: auth.rs  category.rs  channel.rs  delivery.rs  domain.rs  file.rs  mod.rs  order.rs  product.rs  settings.rs  store.rs  theme.rs  user.rs
backend/src/platform/: mod.rs
backend/src/platform/business/: api.rs  domain.rs  repo.rs  routes.rs  service.rs
backend/src/platform/dns/: api.rs  domain.rs  mod.rs  repo.rs  routes.rs  service.rs
backend/src/platform/user/: api.rs  domain.rs  mail.rs  mod.rs  repo.rs  routes.rs  service.rs
backend/src/platform/user/service/: auth.rs
backend/src/routes/: api.rs  generic.rs  mod.rs  web.rs
backend/src/store/: config.rs  mod.rs  registry.rs
backend/src/tenant/: mod.rs
backend/src/tenant/file/: api.rs  domain.rs  repo.rs  routes.rs  service.rs
backend/src/tenant/order/: api.rs  domain.rs  repo.rs  routes.rs  service.rs
backend/src/tenant/product/: api.rs  domain.rs  repo.rs  routes.rs  service.rs
backend/src/tenant/store/: api.rs  domain.rs  extractors.rs  mod.rs  repo.rs  routes.rs  service.rs
backend/src/types/: email.rs  id.rs  mod.rs  name.rs  password.rs  phone.rs  username.rs
backend/src/utils/: auth.rs  error.rs  jwt.rs  log.rs  macros.rs  mod.rs  rand.rs  router.rs  serde_helpers.rs  types.rs
common/: Cargo.toml
common/src/: lib.rs  routes.rs
common/src/models/: delivery.rs  mod.rs  order.rs  product.rs  settings.rs  theme.rs  user.rs
common/src/utils/: mod.rs
dashboard/: Cargo.toml  Trunk.toml  bun.lockb  index.html  package.json  style.css  tsconfig.app.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.svelte  app.css  main.rs  notifications.rs  paths.rs  routes.rs  routes.ts  utils.rs
dashboard/src/components/: Badge.svelte  Badges.svelte  Card.svelte  Content.svelte  Dialog.svelte  Divider.svelte  Editor.svelte  LoadingShow.svelte  Notifications.svelte  Panel.svelte  Row.svelte  Sidebar.svelte  SidebarItem.svelte  Table.svelte  TablePagination.svelte  Timeline.svelte  basic.rs  dialog.rs  error.rs  header.rs  loading.rs  mod.rs  monaco.rs  sidebar.rs  table.rs
dashboard/src/forms/: mod.rs  order.rs  product.rs
dashboard/src/layout/: app.rs  mod.rs  sidebar.rs
dashboard/src/lib/: utils.ts
dashboard/src/pages/: confirmation.rs  home.rs  index.svelte  mod.rs  not_found.rs  order_placement.rs  orders.rs  products.rs  settings.rs  users.rs
dashboard/src/pages/home/: index.rs
dashboard/src/pages/orders/: edit.rs  index.rs  mod.rs  state.rs
dashboard/src/pages/products/: edit.rs  edit.svelte  index.rs  index.svelte  mod.rs  state.rs
dashboard/src/pages/settings/: index.rs  state.rs
dashboard/src/pages/store/: index.rs  mod.rs  state.rs
dashboard/src/pages/users/: index.rs  mod.rs  state.rs
dashboard/src/services/: products.rs
dashboard/src/stores/: notifications.ts
frontend/: .gitignore  astro.config.mjs  bun.lockb  components.json  globals.d.ts  package.json  svelte.config.js  tsconfig.json
frontend/src/apps/web/pages/: auth.astro  business-center.astro  index.astro
frontend/src/assets/: app.css
frontend/src/components/: CheckAuth.svelte  LoginForm.svelte  Notifications.svelte  RegisterForm.svelte  StatusBoundary.svelte  auth-page.svelte  business-auth.svelte  user-auth.svelte
frontend/src/dashboard/components/: Content.svelte  Divider.svelte  Notifications.svelte  Sidebar.svelte
frontend/src/dashboard/pages/orders/: edit.svelte  index.svelte
frontend/src/dashboard/pages/products/: edit.svelte  index.svelte
frontend/src/dashboard/pages/settings/: index.svelte
frontend/src/dashboard/stores/: notifications.ts
frontend/src/islands/business-center/: app.svelte  index.ts
frontend/src/islands/business-center/lib/: utils.ts
frontend/src/islands/mystore/: App.svelte  Theme.svelte  i18n.ts  routes.ts
frontend/src/islands/mystore/components/: FilePicker.svelte  Sidebar.svelte  SidebarItem.svelte  TablePagination.svelte
frontend/src/islands/mystore/locales/: ar.json  en.json
frontend/src/islands/mystore/pages/: index.svelte
frontend/src/islands/mystore/sidebar/: AppSidebar.svelte  BusinessSwitcher.svelte  NavMain.svelte  NavQuickActions.svelte  NavUser.svelte
frontend/src/islands/mystore/stores/: filePicker.ts
frontend/src/islands/test/: App.svelte
frontend/src/islands/user-center/: app.svelte
frontend/src/islands/usercenter/: App.svelte
frontend/src/layouts/: AuthLayout.astro  Base.astro  CenterLayout.astro  Layout.astro  index.astro
frontend/src/lib/: event.ts
frontend/src/lib/stores/: user.ts
frontend/src/pages/: 404.astro  auth.astro  biz.astro  exp.astro  index.astro  login.astro  mystore.astro  register.astro  user-center.astro
frontend/src/pages/docs/: index.astro
frontend/src/pages/mystore/: App.svelte  index.astro  routes.ts
frontend/src/pages/mystore/components/: LoadingShow.svelte  Notifications.svelte  SidebarItem.svelte  TablePagination.svelte
frontend/src/pages/mystore/lib/: utils.ts
frontend/src/styles/: global.css  globals.css
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: build-images.sh  init.sh  run-back.sh  run-cache.sh  run-db.sh  run-dev.sh  run-front.sh  run-minio.sh  run-proxy.sh
templates/: 404.liquid  cart.liquid  collection.liquid  footer.liquid  header.liquid  index copy.liquid  index.liquid  product-card.liquid  product.liquid  shop.liquid  style.css.liquid  style.liquid
(+132 files in other folders)
