[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
field = "0.1.0"
serde = "1.0.219"
bson = "2.14.0"
serde_urlencoded = "0.7.1"
serde_with = "3.12.0"
strum = { version = "0.27", features = ["derive"] }

axum = { version = "0.8.1" }
axum-extra = { version = "0.10.0", features = ["cookie"] }
dotenv = { version = "0.15.0" }
dotenv_codegen = { version = "0.15.0" }
hyper = { version = "1.6.0", features = ["full"] }
jsonwebtoken = { version = "9.3.1" }
tower = { version = "0.5.2" }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
] }
mongodb = { version = "3.2.3" }
futures = { version = "0.3.31" }
tokio = { version = "1.44.2", features = ["fs"] }
indexmap = { version = "2.9.0", features = ["serde"] }
liquid = { version = "0.26.11" }
ts-rs = { version = "10.1.0", features = ["bson", "bson-uuid-impl", "indexmap-impl"] }
bcrypt = "0.17.0"
chrono = "0.4.41"
serde_json = "1.0.140"
async-smtp = "0.10.2"
rust-s3 = "0.35.1"
linkme = "0.3.33"
static_assertions = "1.1.0"
