[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
axum = { version = "0.8.1", features = ["macros"], optional = true }
bson = "2.14.0"
serde = "1.0.219"
gloo-net = { version = "0.6.0", optional = true }
serde_urlencoded = "0.7.1"

[features]
wasm = ["macros/wasm", "dep:gloo-net"]
server = ["dep:axum"]
