[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
backend = { path = "../backend", default-features = false, features = ["wasm"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.8.0-rc2", features = ["csr"] }
leptos_router = "0.8.0-rc2"
log = "0.4.27"
serde = "1.0.219"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.1", features = ["derive"] }
url = "2.5.4"
indexmap = { version = "2.9.0", features = ["serde"] }
slotmap = "1.0.7"
monaco = "0.5.0"
reactive_stores = "0.2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
